# deeplake-api

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile.monitoring  GOVERNANCE.md  LICENSE  MONITORING_ACCESS.md  QUICK_ACCESS.md  README.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  ROADMAP.md  SECURITY.md  SECURITY_SETUP.md  bashrc_complete.sh  bashrc_exports.sh  docker-compose.yml  monitoring-dashboard.html  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  run_local.sh  start_server.sh  tas-info.yaml  test.out
app/: __init__.py  main.py
app/api/grpc/: server.py
app/api/grpc/handlers/: dataset_handler.py  health_handler.py  search_handler.py  vector_handler.py
app/api/http/: dependencies.py
app/api/http/v1/: __init__.py  backup.py  datasets.py  health.py  import_export.py  indexes.py  rate_limits.py  search.py  vectors.py
app/config/: logging.py  settings.py
app/middleware/: rate_limit.py
app/models/: exceptions.py  schemas.py
app/services/: auth_service.py  backup_service.py  cache_service.py  deeplake_service.py  embedding_service.py  hybrid_search_service.py  import_export_service.py  index_service.py  metadata_filter.py  metrics_service.py  rate_limit_service.py
deployment/: alerting-setup.md  alertmanager-templates.yml  alertmanager.yml  prometheus-alerts.yml  prometheus.yml
deployment/backup/: backup-config.yaml  backup-cronjob.yaml
deployment/grafana/: README.md
deployment/grafana/dashboards/: cache-and-errors.json  search-performance.json  service-overview.json  tenant-analytics.json  vector-operations.json
deployment/grafana/provisioning/dashboards/: dashboards.yaml
deployment/grafana/provisioning/datasources/: prometheus.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
docs/: DEEPLAKE_SERVICE_SPEC.md  README.md  README_LOCAL_DEV.md  architecture.md  configuration.md  disaster_recovery.md  faq.md  hybrid-search.md  import-export.md  installation.md  metadata-filtering.md  monitoring-quickstart.md  monitoring-verification.md  monitoring.md  observability.md  quickstart.md  rate_limiting.md  troubleshooting.md  vector-indexing.md
docs/api/http/: README.md
docs/deployment/: monitoring-dashboard.md  production.md
docs/examples/: README.md  curl_examples.sh  python_client.py
docs/reference/: error-codes.md
proto/: deeplake_service.proto
scripts/: WSL_SETUP_GUIDE.md  build.sh  check_wsl_setup.sh  cleanup_datasets.py  deploy.sh  disaster_recovery.py  generate_api_key.py  generate_api_key_quick.py  generate_api_key_simple.py  generate_proto.sh  local_dev_config.py  quick_setup.sh  setup-alerting.sh  setup-monitoring.sh  start-monitoring.sh  test.sh  verify_monitoring.sh
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_api_comprehensive.py  test_end_to_end.py  test_monitoring_alerting.py  test_vector_insert_api.py
tests/unit/: test_deeplake_service.py  test_distance_metrics.py  test_http_api.py  test_ivf_indexing.py
